[GH-1013] Fix visibility of clear button for select option (#1160)
* Show clear button for (multi)select property only when it is being edited.

* Files for multi-select property moved to separate folder.

* Extracted component for select property.

* Minor tweaks for Label style.

* Redundant code for clear button removed.

* Unit test for select property component added.

* Jest snapshots updated.

* Fix stylelint error.

* Jest snapshot updated.

--- a/webapp/src/components/kanban/kanbanCard.scss
+++ b/webapp/src/components/kanban/kanbanCard.scss
@@ -35,7 +35,7 @@
         right: 0;
     }
 
-    > .octo-propertyvalue {
+    .octo-propertyvalue {
         margin: 4px 0 0;
         font-size: 12px;
         line-height: 18px;
